# SDiZOp1

./: CMakeLists.txt
cpp/: BST.cpp  heap.cpp  list.cpp  main.cpp  performance_test.cpp  table.cpp  timer.cpp
h/: BST.h  CSV_output.h  benchmark.h  data_structure.h  headers.h  heap.h  list.h  main.h  performance_test.h  randomizer.h  read_file.h  table.h  timer.h
tests/: BST_test.cpp  DSW_test.cpp  heap_test.cpp  list_test.cpp  table_test.cpp  timer_test.cpp
